--- a/.github/workflows/main_tournament-app.yml
+++ b/.github/workflows/main_tournament-app.yml
@@ -25,11 +25,18 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      # Zip the build directory
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.6.1
+        with:
+          filename: release.zip
+          path: .Frontend/tournament/build/*
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: Frontend/tournament  
+          path: Frontend/tournament/release.zip
 
   deploy:
     runs-on: ubuntu-latest
