--- a/.github/workflows/main_tournament-app.yml
+++ b/.github/workflows/main_tournament-app.yml
@@ -30,7 +30,7 @@ jobs:
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
-          path: .Frontend/tournament/build/*
+          path: Frontend/tournament/build/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
