--- a/.github/workflows/main_tournament-app.yml
+++ b/.github/workflows/main_tournament-app.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: Frontend/tournament/release.zip
+          path: Frontend/tournament/build/release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -57,5 +57,5 @@ jobs:
         with:
           app-name: 'tournament-app'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_73E8326CE8DF4C4E9DEBDE2216D98D29 }}
-          package: Frontend/tournament/release.zip
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHSROFILE_73E8326CE8DF4C4E9DEBDE2216D98D29 }}
+          package: node-app/release.zip
