--- a/.github/workflows/main_tournament-app.yml
+++ b/.github/workflows/main_tournament-app.yml
@@ -58,4 +58,4 @@ jobs:
           app-name: 'tournament-app'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHSROFILE_73E8326CE8DF4C4E9DEBDE2216D98D29 }}
-          package: node-app/release.zip
+          package: release.zip
