--- a/.github/workflows/main_tournament-app.yml
+++ b/.github/workflows/main_tournament-app.yml
@@ -48,8 +48,9 @@ jobs:
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
-        with:
-          name: node-app
+
+      - name: List Files
+        run: ls -R
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
