--- a/.github/workflows/main_tournament-app.yml
+++ b/.github/workflows/main_tournament-app.yml
@@ -18,12 +18,11 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
           cd Frontend/tournament   
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build 
 
       # Zip the build directory
       - name: Zip Release
@@ -35,7 +34,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: tournament-app
           path: Frontend/tournament/build/release.zip
 
   deploy:
