--- a/.github/workflows/main_tournament-app.yml
+++ b/.github/workflows/main_tournament-app.yml
@@ -29,7 +29,7 @@ jobs:
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
-          path: Frontend/tournament/build/*      
+          path: ./*      
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v1
