deployment to azure fixes

--- a/.github/workflows/backend_deployment.yml
+++ b/.github/workflows/backend_deployment.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,12 +19,10 @@ jobs:
           docker build -t advanceddatabase.azurecr.io/advanced-databases-backend:latest Backend/.
           docker push advanceddatabase.azurecr.io/advanced-databases-backend:latest
 
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure Container App
         uses: azure/webapps-deploy@v2
