--- a/.github/workflows/backend_deployment.yml
+++ b/.github/workflows/backend_deployment.yml
@@ -22,7 +22,7 @@ jobs:
       - name: login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_ADVANCED_DATABASES_CREDENTIALS }}
 
       - name: Deploy to Azure Container App
         uses: azure/webapps-deploy@v2
