--- a/.github/workflows/backend_deployment.yml
+++ b/.github/workflows/backend_deployment.yml
@@ -9,25 +9,35 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    permissions: 
+        id-token: write #This is required for requesting the OIDC JWT Token
+        contents: read #Required when GH token is used to authenticate with private repo
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build and push Docker image
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} advanceddatabase.azurecr.io
-          docker build -t advanceddatabase.azurecr.io/advanced-databases-backend:latest Backend/.
-          docker push advanceddatabase.azurecr.io/advanced-databases-backend:latest
+    #   - name: Build and push Docker image
+    #     run: |
+    #       docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} advanceddatabase.azurecr.io
+    #       docker build -t advanceddatabase.azurecr.io/advanced-databases-backend:latest Backend/.
+    #       docker push advanceddatabase.azurecr.io/advanced-databases-backend:latest
 
-      - name: login to Azure
+      - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_ADVANCED_DATABASES_CREDENTIALS }}
 
-      - name: Deploy to Azure Container App
-        uses: azure/webapps-deploy@v2
+      - name: Build and push container image to registry
+        uses: azure/container-apps-deploy-action@v2
         with:
-          app-name: 'advanced-databases-backend'
-          images: 'advanceddatabase.azurecr.io/advanced-databases-backend:latest'
-          slot-name: 'production'
+          appSourcePath: ${{ github.workspace }} 
+          registryUrl: advanceddatabase.azurecr.io
+          registryUsername: ${{ secrets.DOCKER_USERNAME }}
+          registryPassword: ${{ secrets.DOCKER_PASSWORD }}
+          containerAppName: advanced-databases-backend
+          resourceGroup: advanced-databases
+          imageToBuild: advanceddatabase.azurecr.io/advanced-databases-backend:${{ github.sha }}
+          _buildArgumentsKey_: |
+            _buildArgumentsValues_
     
