--- a/.github/workflows/backend_deployment.yml
+++ b/.github/workflows/backend_deployment.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} advanceddatabase.azurecr.io
-          docker build -t advanceddatabase.azurecr.io/advanced-databases-frontend:latest Frontend/.
+          docker build -t advanceddatabase.azurecr.io/advanced-databases-frontend:latest Frontend/tournament/.
           docker push advanceddatabase.azurecr.io/advanced-databases-frontend:latest
 
       - name: Azure Login
