--- a/.github/workflows/backend_deployment.yml
+++ b/.github/workflows/backend_deployment.yml
@@ -50,10 +50,10 @@ jobs:
       - name: Build and push Docker image
         env:
           SURREALDB_URL: ${{ secrets.SURREALDB_URL }}
-          SUERREALDB_LOGIN: ${{ secrets.SURREALDB_LOGIN }}
-          SURREALDB_PASSWORD: ${{ secrets.SURREALDB_PASSWORD }}
-          SUERREALDB_NS: ${{ secrets.SURREALDB_NS }}
-          SUERREALDB_DB: ${{ secrets.SURREALDB_DB }}
+          SUERREALDB_LOGIN: ${{ secrets.SUERREALDB_LOGIN }}
+          SUERREALDB_PASSWORD: ${{ secrets.SUERREALDB_PASSWORD }}
+          SUERREALDB_NS: ${{ secrets.SUERREALDB_NS }}
+          SUERREALDB_DB: ${{ secrets.SUERREALDB_DB }}
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} advanceddatabase.azurecr.io
           docker build -t advanceddatabase.azurecr.io/advanced-databases-frontend:latest Frontend/tournament/.
