--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,5 +1,17 @@
 FROM python:latest
 
+ARG SURREALDB_URL
+ARG SUERREALDB_LOGIN
+ARG SUERREALDB_PASSWORD
+ARG SUERREALDB_NS
+ARG SUERREALDB_DB
+
+ENV SURREALDB_URL=$SURREALDB_URL
+ENV SUERREALDB_LOGIN=$SUERREALDB_LOGIN
+ENV SUERREALDB_PASSWORD=$SUERREALDB_PASSWORD
+ENV SUERREALDB_NS=$SUERREALDB_NS
+ENV SUERREALDB_DB=$SUERREALDB_DB
+
 WORKDIR /app    
 
 COPY . /app
